--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0"
   },
   "scripts": {
     "dev": "yarn nodemon --inspect dest/index.js",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "jest": "jest"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
