--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.5.0",
+    "mongodb": "^5.5.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0"
   },
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
