--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@types/jest": "^29.5.1",
     "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.5.0",
@@ -19,6 +20,7 @@
     "jest": "jest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.0",
     "dotenv": "^16.0.3",
