--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.22",
