Experiments with index.d.ts

--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  }
+  },
+
+  "files": [
+    "src/types/index.d.ts"
+  ]
 }
