--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/jest": "^29.5.1",
-    "@types/supertest": "^2.0.12",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0"
+    "mongodb": "^5.5.0"
   },
   "scripts": {
     "dev": "yarn nodemon --inspect dest/index.js",
@@ -21,6 +16,11 @@
     "jest": "jest"
   },
   "devDependencies": {
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "@types/jest": "^29.5.1",
+    "@types/supertest": "^2.0.12",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
@@ -29,9 +29,5 @@
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
-  },
-
-  "files": [
-    "src/types/index.d.ts"
-  ]
+  }
 }
