--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.5.0"
+    "mongodb": "^5.5.0",
+    "nodemailer": "^6.9.3",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "yarn nodemon --inspect dest/index.js",
@@ -16,17 +19,19 @@
     "jest": "jest"
   },
   "devDependencies": {
-    "jest": "^29.5.0",
-    "supertest": "^6.3.3",
-    "ts-jest": "^29.1.0",
-    "@types/jest": "^29.5.1",
-    "@types/supertest": "^2.0.12",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.1.0",
+    "@types/nodemailer": "^6.4.8",
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.2",
     "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
