--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/uuid": "^9.0.2",
     "dotenv": "^16.0.3",
     "jest": "^29.5.0",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
