--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.5.2",
     "nodemailer": "^6.9.3",
     "uuid": "^9.0.0"
   },
