--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.5.2",
     "nodemailer": "^6.9.3",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
   "scripts": {
